--- a/components/Contact/ContactCard/ContactCard.module.scss
+++ b/components/Contact/ContactCard/ContactCard.module.scss
@@ -21,21 +21,64 @@
         font-size: 1.5rem;
       }
     }
-    .actions {
+    .menu {
       margin-left: auto;
       display: flex;
       flex-direction: column;
-      .actionBtn {
-        margin-bottom: 0.5rem;
-        min-width: 100px;
-        padding: 0.5rem 1rem;
-        &.deleteBtn {
+      position: relative;
+      &.opened {
+        .menuList {
+          opacity: 1;
+          z-index: 2;
+          transform: translateY(0);
+        }
+      }
+      .menuList {
+        position: absolute;
+        opacity: 0;
+        z-index: -1;
+        top: 2rem;
+        right: 1rem;
+        background: white;
+        box-shadow: 2px 2px 0px var(--color-shadow);
+        border: 1px solid var(--color-shadow);
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        transform: translateY(-100%);
+        transition: all 250ms;
+        .actionBtn {
+          min-width: 120px;
+          padding: 0.75rem 0.75rem;
+          font-size: 0.875rem;
+          box-shadow: none;
+          background:none;
+          border-radius: 0;
           &:hover {
-            background: var(--color-error);
+            background: var(--color-medium-grey);
             color: white;
-            filter: brightness(1);
+          }
+          &.deleteBtn {
+            &:hover {
+              background: var(--color-error);
+              color: white;
+              filter: brightness(1);
+            }
           }
         }
+      }
+      .menuBtn {
+        font-size: 1.25rem;
+        color: var(--color-black);
+      }
+      .menuBackdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: transparent;
+        z-index: 1;
       }
     }
   }
